test/2/type/acc-void.err
test/2/type/acc-void.ploy:2:9-11: type error: accessee has no field matching accessor `0`. accessee type: ()
|   x = 0@()
          ~~
test/2/type/acc-void.ploy:2:7-8: note: accessor is here.
|   x = 0@()
        ~
